--- a/capacity_app/templates/capacity_app/history_request.html
+++ b/capacity_app/templates/capacity_app/history_request.html
@@ -18,6 +18,12 @@
 .bootstrap-table .fixed-table-toolbar .columns-right {
     float: right;
 }
+.bootstrap-table .fixed-table-pagination > .pagination {
+    float:right;
+}
+td {
+    white-space: nowrap;
+}
 </style>
 <body>
 <div class="pagetitle">
