--- a/capacity_app/templates/capacity_app/history_request.html
+++ b/capacity_app/templates/capacity_app/history_request.html
@@ -74,7 +74,7 @@ td {
                     <th nowrap class="stable2" data-field="stable2" data-sortable="true" >Stable2 (TB)</th>
                     <th nowrap class="arbor" data-field="arbor" data-sortable="true" >Arbor (TB)</th>
                     <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
-                    <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Today Date</th>
+                    <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
                     <th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Move Group Name</th>
                     <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
                     <th nowrap class="status" data-field="status" data-sortable="true" >Status</th>
