--- a/capacity_app/templates/capacity_app/base.html
+++ b/capacity_app/templates/capacity_app/base.html
@@ -50,7 +50,7 @@
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="{% url 'login' %}">
+                        <a class="dropdown-item d-flex align-items-center" href="{% url 'logout' %}">
                             <i class="bi bi-box-arrow-right"></i>
                             <span>Sign Out</span>
                         </a>
