--- a/capacity_app/templates/capacity_app/update_request.html
+++ b/capacity_app/templates/capacity_app/update_request.html
@@ -8,6 +8,8 @@
 
     {% block content %}
     <title>Update Request</title>
+    <link href="{% static 'capacity_app/table_extensions/fontawesome-free-5.15.1/css/all.css' %}" rel="stylesheet">
+    <link href="{% static 'capacity_app/table_extensions/fontawesome-free-5.15.1/css/all.min.css' %}" rel="stylesheet">
     <style>
 form {
     font-size:14px;
