--- a/capacity_app/templates/capacity_app/base.html
+++ b/capacity_app/templates/capacity_app/base.html
@@ -54,11 +54,21 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li>
+                        <a class="dropdown-item d-flex align-items-center" href="#">
+                            <i class="bi bi-envelope"></i>
+                            <span>{{email}}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
                         <a class="dropdown-item d-flex align-items-center" href="{% url 'logout' %}">
                             <i class="bi bi-box-arrow-right"></i>
                             <span>Sign Out</span>
                         </a>
                     </li>
+
 
                 </ul><!-- End Profile Dropdown Items -->
             </li><!-- End Profile Nav -->
