--- a/capacity_app/templates/capacity_app/dashboard.html
+++ b/capacity_app/templates/capacity_app/dashboard.html
@@ -15,6 +15,13 @@
 
     <ul class="sidebar-nav" id="sidebar-nav">
         <li class="nav-item">
+            <a class="nav-link collapsed" href="{% url 'approval' %}">
+                <i class="bi bi-grid"></i>
+                <span>Approval</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
+
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'dashboard' %}">
                 <i class="bi bi-grid"></i>
                 <span>Dashboard</span>
